@startuml io

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram includes
!include ../../GameCommunication/packages/convert.puml
!include ../../GameEngine/packages/io.puml

' class diagram (https://plantuml.com/class-diagram)
$package(console.io) {
    class ConsoleGameIOFactory {
        - in: InputStream {readOnly}
        - out: PrintStream {readOnly}
        - log: PrintStream {readOnly}
        --
        + ConsoleGameIOFactory(factory: ProtocolFactory)
        + createGameInputReader(): GameInputReader
        + createActionSender(): ActionSender
        + createGameLogger(): GameLogger
    }
    engine.io.GameIOFactory <|.. ConsoleGameIOFactory
    ConsoleGameIOFactory ..> "1" communication.convert.Serializer : - actionSerializer: Serializer<Action> {readOnly}
    ConsoleGameIOFactory ..> "1" communication.convert.Converter : - actionResultConverter: Converter<ActionResult> {readOnly}
    ConsoleGameIOFactory ..> "1" communication.convert.Converter : - cellStatusConverter: Converter<CellStatus> {readOnly}
    ConsoleGameIOFactory ..> "1" communication.convert.Serializer : - logCellStatusSerializer: Serializer<CellStatus> {readOnly}

    class ConsoleGameInputReader {
        - input: Scanner {readOnly}
        --
        + ConsoleGameInputReader(in: InputStream,
        actionResultParser: Parser<ActionResult>,
        cellStatusParser: Parser<CellStatus>)
        + readMazeInfo(): MazeInfo
        + readPlayerInfo(): PlayerInfo
        + hasNextTurn(): boolean
        + readTurnInfo(): TurnInfo
        - readActionResult(): ActionResult
        - readCellStatus(): CellStatus
        + close(): void
    }
    engine.io.GameInputReader <|.. ConsoleGameInputReader
    ConsoleGameInputReader ..> "1" communication.convert.Parser : - actionResultParser: Parser<ActionResult> {readOnly}
    ConsoleGameInputReader ..> "1" communication.convert.Parser : - cellStatusParser: Parser<CellStatus> {readOnly}

    class ConsoleActionSender {
        - out: PrintStream {readOnly}
        --
        + ConsoleActionSender(out: PrintStream,
        actionSerializer: Serializer<Action>)
        + sendAction(action: Action): void
    }
    engine.io.ActionSender <|.. ConsoleActionSender
    ConsoleActionSender ..> "1" communication.convert.Serializer : - actionSerializer: Serializer<Action> {readOnly}

    class ConsoleGameLogger {
        - log: PrintStream {readOnly}
        --
        - ConsoleGameLogger(log: PrintStream,
        actionResultSerializer: Serializer<ActionResult>,
        cellStatusSerializer: Serializer<CellStatus>,
        logCellStatusSerializer: Serializer<CellStatus>)
        {static} + getInstance(log: PrintStream,
        actionResultSerializer: Serializer<ActionResult>,
        cellStatusSerializer: Serializer<CellStatus>,
        logCellStatusSerializer: Serializer<CellStatus>): ConsoleGameLogger
        {static} ~ resetInstance(): void
        + logMessage(message: String, args: Object...): void
        + logLastActionResult(lastActionResult: ActionResult): void
        - logActionResult(prefix: String, actionResult: ActionResult): void
        + logCurrentCell(currentCell: Cell): void
        + logNeighborCells(neighborCells: Cell[]): void
        - logCell(prefix: String, cell: Cell): void
        + logMaze(maze: Maze, currentCell: Cell): void
        - logMazeCell(cell: Cell, currentCell: Cell): void
    }
    engine.io.GameLogger <|.. ConsoleGameLogger
    ConsoleGameLogger --> "1" ConsoleGameLogger : {static} - instance: ConsoleGameLogger
    ConsoleGameLogger ..> "1" communication.convert.Serializer : - actionResultSerializer: Serializer<ActionResult> {readOnly}
    ConsoleGameLogger ..> "1" communication.convert.Serializer : - cellStatusSerializer: Serializer<CellStatus> {readOnly}
    ConsoleGameLogger ..> "1" communication.convert.Serializer : - logCellStatusSerializer: Serializer<CellStatus> {readOnly}
}

@enduml
